# whoop-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
skill/: SKILL.md
skill/references/: biometric-guide.md  tool-schemas.md  workflows.md
src/whoop_mcp/: __init__.py  auth.py  server.py  tools.py
src/whoop_write_mcp/: __init__.py  auth.py  cli.py  server.py  tools.py  tools_read.py  tools_write.py
tests/: test_auth.py  test_tools.py  test_tools_read.py  test_tools_write.py
